--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.1",
-    "openai": "^3.3.0"
+    "openai": "^3.3.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
