--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.13.0",
     "react-speech-recognition": "^3.10.0",
+    "react-toastify": "^9.1.3",
     "regenerator-runtime": "^0.13.11"
   },
   "devDependencies": {
